--- a/index3.html
+++ b/index3.html
@@ -80,8 +80,8 @@
 
                     <div class="home__info">
                         <div>
-                            <span class="home__info-title">10 best places to visit</span>
-                            <a href="https://www.tripadvisor.in/Attractions-g297657-Activities-Meghalaya.html" class="button button--flex button--link home__info-button">
+                            <span class="home__info-title">5 best places to visit</span>
+                            <a href="https://2478.github.io/NEtrip-Destination/" class="button button--flex button--link home__info-button">
                                 More <i class="ri-arrow-right-line"></i>
                             </a>
                         </div>
